# homeassistant-smart-charging

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements-test.txt
.claude/: settings.json
.claude/agents/: adr-reviewer.md  analysis-reviewer.md  code-reviewer.md  impl-spec-reviewer.md  system-design-reviewer.md  test-reviewer.md
.github/: CODEOWNERS  SECURITY.md  create-uc-issues.sh  dependabot.yml  setup-labels.sh
.github/ISSUE_TEMPLATE/: use-case.md
.github/workflows/: _ai-draft.yml  _ai-fix.yml  _ai-review.yml  ai-pipeline.yml  ci.yml  fix-review.yml  generate-uc.yml  release-please.yml  release.yml  review-analysis.yml
custom_components/smart_charging/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  time.py
docs/: smart-charging.requirements.md  use-cases.md
docs/adl/: 0001-use-architecture-decision-records.md  0002-domain-and-package-layout.md  0004-owned-vs-mapped-entities.md  0009-testing-strategy.md  0010-engines-package-home.md  0011-cross-manager-coordination-via-domain-events.md  0012-coordinator-internal-decomposition.md  README.md  template.md
docs/adr/: 0001-use-architecture-decision-records.md  0002-domain-and-package-layout.md  0003-hardware-abstraction-adapters.md  (+8 more)
tests/: conftest.py  test_captar_end_to_end.py  test_config_flow.py  test_coordinator.py  test_init.py  test_number.py  test_select.py  test_sensor.py  test_solar_end_to_end.py  test_switch.py  test_time.py
(+110 files in other folders)
