[project]
name = "smart-charging"
version = "0.1.0"
description = "Smart Charging — Home Assistant EV charging integration (Power/Solar/SolarOnly)"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
